package lapr.project.model;

public enum ShipSummary {
    CODE,VESSEL_NAME, START_BASE_DATE_TIME, END_BASE_DATE_TIME, TOTAL_MOVEMENT_TIME,
    TOTAL_NUMBER_MOVEMENTS, MAX_SOG, MAX_COG, MEAN_SOG, MEAN_COG, DEPARTURE_LATITUDE,
    DEPARTURE_LONGITUDE, ARRIVAL_LATITUDE, ARRIVAL_LONGITUDE, TRAVELED_DISTANCE, DELTA_DISTANCE;
}
